charts/pocket-id/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: pocket-id
  name: pocket-id
  namespace: pocket-id
spec:
  ports:
  - name: http
    port: 3000
    protocol: TCP
    targetPort: http
  selector:
    app: pocket-id
  type: ClusterIP
