charts/pocket-id/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: pocket-id
  annotations:
    gethomepage.dev/enabled: "true"
    gethomepage.dev/group: Homelab
    gethomepage.dev/icon: pocket.png
    gethomepage.dev/name: Pocket
spec:
  parentRefs:
  - name: traefik-gateway
    namespace: traefik
  hostnames:
  - login.int.imdevinc.com
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /
    backendRefs:
    - name: pocket-id
      namespace: pocket-id
      port: 80
